--- a/pulllist/ticket_template.html
+++ b/pulllist/ticket_template.html
@@ -59,7 +59,7 @@
 
 
 
-<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
 
     <h1>STEEKKAART</h1>
     <table>
