printing to magazijn

--- a/pulllist/tablerow_print_template.html
+++ b/pulllist/tablerow_print_template.html
@@ -5,4 +5,5 @@
           <div class="divTableCell">{{barcode}}</div>
           <div class="divTableCell">{{patron}}</div>
           <div class="divTableCell"><a href="{{file}}">loopbon</a></div>
+          <div class="divTableCell">PRINT</div>
         </div>
