printing to magazijn

--- a/pulllist/tablerow_template.html
+++ b/pulllist/tablerow_template.html
@@ -4,5 +4,5 @@
           <div class="divTableCell">{{title}}</div>
           <div class="divTableCell">{{barcode}}</div>
           <div class="divTableCell">{{patron}}</div>
-          <div class="divTableCell"><a href="{{file}}">loopbon</a></div>
+          <div class="divTableCell"><a href="{{dir}}/{{file}}">loopbon</a></div>
         </div>
