--- a/pulllist/tablerow_print_template.html
+++ b/pulllist/tablerow_print_template.html
@@ -4,6 +4,6 @@
           <div class="divTableCell">{{title}}</div>
           <div class="divTableCell">{{barcode}}</div>
           <div class="divTableCell">{{patron}}</div>
-          <div class="divTableCell"><a href="{{file}}">loopbon</a></div>
-          <div class="divTableCell">PRINT</div>
+          <div class="divTableCell"><a href="{{dir}}/{{file}}">loopbon</a></div>
+          <div class="divTableCell"><button onclick="moveFile('{{file}}');return false;">Print again</button> </div>
         </div>
