--- a/patron/idcards/f.latum.html
+++ b/patron/idcards/f.latum.html
@@ -10,13 +10,13 @@
   <body class="creditcard">
     <div id="patronData">
       <div id="name">
-        {{name.givenName}} {{name.familyName}}
+        Frits van Latum
       </div>
       <div id="barcode">
-        <barcode code="{{externalId}}" type="C39" height="0.99" text="1" />
+        <barcode code="f.latum" type="C39" height="0.99" text="1" />
       </div>
       <div id="barcodeNo">
-        {{externalId}}
+        f.latum
       </div>
     </div>
   </body>
