--- a/patron/id_template.html
+++ b/patron/id_template.html
@@ -33,5 +33,5 @@
         </div>
       </div>
     </div>
-    <button id='print'>Print ID card</button> <a href="patron/idcards/{{externalId}}.pdf">View ID Card</a>
+    <button id='print' onclick="printFile('patron/idcards/{{externalId}}.pdf');return false;">Print ID card</button> <a href="patron/idcards/{{externalId}}.pdf">View ID Card</a>
 </div>
