printing pulllist tickets

--- a/patron/id_template.html
+++ b/patron/id_template.html
@@ -33,5 +33,7 @@
         </div>
       </div>
     </div>
+    <div id="buttons">
     <button id='print' onclick="printFile('patron/idcards/{{externalId}}.pdf');return false;">Print ID card</button> <a href="patron/idcards/{{externalId}}.pdf">View ID Card</a>
+</div>
 </div>
