--- a/patron/idcard_template.html
+++ b/patron/idcard_template.html
@@ -6,6 +6,7 @@
     <!-- Load paper.css for happy printing
     <link rel="stylesheet" href="paper.css">
     <style>@page { size: creditcard }</style> -->
+    <link rel="stylesheet" href="idcard.css">
   </head>
   <body class="creditcard">
     <div id="patronData">
