--- a/patron/id_template.html
+++ b/patron/id_template.html
@@ -34,6 +34,6 @@
       </div>
     </div>
     <div id="buttons">
-    <button id='print' onclick="printFile('patron/idcards/{{externalId}}.pdf');return false;">Print ID card</button> <a href="patron/idcards/{{externalId}}.pdf">View ID Card</a>
+    <button id='print' onclick="printFile('idcards/{{externalId}}.pdf');return false;">Print ID card</button> <a href="patron/idcards/{{externalId}}.pdf">View ID Card</a>
 </div>
 </div>
