--- a/patron/idcard_template.html
+++ b/patron/idcard_template.html
@@ -8,14 +8,14 @@
         padding:0;
         margin:0;
       }
-      #card {
+      /*#card {
       margin-top: 100px;
       margin-left: 10px;
       padding: 0px;
-      /*border-style: solid;
+      border-style: solid;
       border-width: 1px;
-      border-radius: 5px;*/
-      }
+      border-radius: 5px;
+      }*/
       #name, #barcode, #barcodeNo {
         margin: 5px;
         padding: 0;
@@ -35,8 +35,8 @@
         {{externalId}}
       </div>
     </div>
-    <div id="logo">
+<!--    <div id="logo">
       <img src="{{image}}" width="80mm" height="50mm" />
-    </div>
+    </div>-->
   </body>
 </html>
