--- a/pulllist/tablerow_print_template.html
+++ b/pulllist/tablerow_print_template.html
@@ -5,5 +5,5 @@
           <div class="divTableCell">{{barcode}}</div>
           <div class="divTableCell">{{patron}}</div>
           <div class="divTableCell"><a href="{{dir}}/{{file}}">loopbon</a></div>
-          <div class="divTableCell"><button onclick="moveFile('{{file}}');return false;">Print again</button> </div>
+          <div class="divTableCell"><button onclick="printFile('{{file}}');return false;">Print again</button> </div>
         </div>
