--- a/pulllist/ticket_template.html
+++ b/pulllist/ticket_template.html
@@ -2,19 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="http://localhost/loopbonnen/pulllist/tickets/ticket.css">
+    <style>
+      body {
+        background-color: white;
+      }
+      h1{
+        font-size: 150%;
+      }
+      p.small {
+        font-size: 50%;
+      }
+    </style>
   </head>
   <body>
-<p>&nbsp;</p>
-    <!--<h1>.... TEST TEST TEST .......</h1>-->
+    <p>&nbsp;</p>
+
     <h1>PLEASE DO NOT REMOVE THIS FORM FROM THE BOOK !</h1>
     <table>
-      <thead>
-        <tr>
-          <td><b> -- WMS -- </b></td>
-          <td></td>
-        </tr>
-      </thead>
       <tbody>
         <tr>
           <td>Date</td>
@@ -56,7 +60,7 @@
         </tr>
       </tbody>
     </table>
-<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+    <p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
 
 
 
@@ -64,7 +68,7 @@
 
 
 
-<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+    <p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
 
     <h1>STEEKKAART</h1>
     <table>
@@ -111,5 +115,6 @@
         </tr>
       </tbody>
     </table>
+    <p class="small">-- Printed from WMS --</p>
   </body>
 </html>
