--- a/pulllist/ticket_template.html
+++ b/pulllist/ticket_template.html
@@ -107,6 +107,10 @@
           <td id="patron">{{ content.patronName }} ( {{ content.lenerbarcode }} )</td>
         </tr>
         <tr>
+          <td>Note</td>
+          <td>{{ content.freeText }}</td>
+        </tr>
+        <tr>
           <td>&nbsp;</td><td></td>
         </tr>
         <tr>
