loopbon shelving location

--- a/pulllist/tablerow_print_template.html
+++ b/pulllist/tablerow_print_template.html
@@ -1,5 +1,6 @@
         <div class="divTableRow">
           <div class="divTableCell">{{date}}</div>
+          <div class="divTableCell">{{shelf}}</div>
           <div class="divTableCell">{{callNumber}}</div>
           <div class="divTableCell">{{title}}</div>
           <div class="divTableCell">{{barcode}}</div>
