--- a/pulllist/ticket_template.html
+++ b/pulllist/ticket_template.html
@@ -33,6 +33,10 @@
           <td id="callNumber">{{ content.callNumber.description }}</td>
         </tr>
         <tr>
+          <td>Note</td>
+          <td>{{ content.freeText }}</td>
+        </tr>
+        <tr>
           <td>Year/Vol./No.</td>
           <td id="issue">{{content.holdingInformation.enumeration}} {{ content.holdingInformation.chronology }} </td>
         </tr>
