--- a/pulllist/tablerow_print_template.html
+++ b/pulllist/tablerow_print_template.html
@@ -1,4 +1,5 @@
         <div class="divTableRow">
+          <div class="divTableCell">{{no}}</div>
           <div class="divTableCell">{{date}}</div>
           <div class="divTableCell">{{shelf}}</div>
           <div class="divTableCell">{{callNumber}}</div>
